--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,35 @@
+ :root { 
+    --clr-bg: #AD88C6;
+    --clr-dark: #7469B6;
+    --clr-pink:#E1AFD1;
+    --clr-light:#FFE6E6;
+   }
+   
+    /* --clr-primary-1: #7B1FA2;
+    --clr-primary-2: #AB47BC;
+    --clr-primary-3: #BA68C8;
+    --clr-grey-1: #455A64;
+    --clr-grey-2: #607D8B;
+    --clr-grey-3: #90A4AE;
+    --clr-grey-4: #CFD8DC;
+    --clr-white: #fff;
+    --ff-primary: "vazir", sans-serif;
+    --transition: all, 0.3s, linear;
+    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); */
+
+
+ /* color: var(--clr-grey-1); */
+
+
+body {
+    background: var(--clr-bg)
+}
+
 .container {
     margin: auto;
     margin-top: 2rem;
+
 }
 
 header {
@@ -8,6 +37,8 @@ header {
     gap: 0.7rem;
     align-items: center;
 }
+
+
 
 .bi-journal-check {
     font-size: 1.8rem;
@@ -23,6 +54,8 @@ label {
     font-size: 1.1rem;
 }
 
+
+
 .bi-x {
     font-size: 1.3rem;
     color: rgb(246, 66, 66);
@@ -35,8 +68,7 @@ label {
 
 .clear-btn {
     display: block;
-    width: 100%;
-    margin: auto;
+
 }
 
 
@@ -44,13 +76,56 @@ label {
     color: rgb(180, 177, 175);
 }
 
+.hoverMode{
+    transition: color 0.3s ease-in-out;
+   
+}
+ 
 
-
-.hoverMode:hover{
-  text-shadow: 1px 1px 2px rgb(160, 159, 159);
-  /* cursor:cell; */
+.hoverMode:hover {
+    color:blueviolet;
+    cursor:cell;
 }
 
 .line-on-text {
-text-decoration-line: line-through;
+    text-decoration-line: line-through;
 }
+
+#myProgress {
+    width: 100%;
+    height: 15px;
+    border-radius: 20px;
+    color: var(--clr-dark);
+    border: 2px solid;
+    position: relative;
+    margin:1 rem;
+}
+
+#myBar {
+    width: 0;
+    height: 12px;
+    border-radius: inherit;
+    background-color: var(--clr-dark);
+    background: currentColor;
+}
+
+.container {
+    width: 50%;
+}
+
+.bar-container {
+    gap:0.5rem;
+    align-items: center;
+    justify-content: center;
+}
+
+@media (max-width:768px) {
+    .container {
+        width: 100%;
+    }
+}
+
+
+
+
+
