--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,11 @@
- :root { 
-    --clr-bg: #AD88C6;
-    --clr-dark: #7469B6;
-    --clr-pink:#E1AFD1;
-    --clr-light:#FFE6E6;
-   }
-   
-    /* --clr-primary-1: #7B1FA2;
-    --clr-primary-2: #AB47BC;
-    --clr-primary-3: #BA68C8;
-    --clr-grey-1: #455A64;
-    --clr-grey-2: #607D8B;
-    --clr-grey-3: #90A4AE;
+ :root {
+     --clr-bg: #AC87C5;
+     --clr-dark: #756AB6;
+     --clr-pink: #d5a3de;
+     --clr-light: #FFE5E5;
+ }
+
+ /* --clr-primary-1: #7B1FA2;
     --clr-grey-4: #CFD8DC;
     --clr-white: #fff;
     --ff-primary: "vazir", sans-serif;
@@ -22,110 +17,136 @@
  /* color: var(--clr-grey-1); */
 
 
-body {
-    background: var(--clr-bg)
+ body {
+     background: var(--clr-bg)
+ }
+
+ .container {
+     margin: auto;
+     margin-top: 2rem;
+   
+
+ }
+
+ header {
+     display: flex;
+     gap: 0.7rem;
+     align-items: center;
+ }
+
+.bi-journal-check , .tittle{
+    color: var(--clr-dark);
 }
 
-.container {
-    margin: auto;
-    margin-top: 2rem;
+ .bi-journal-check {
+     font-size: 1.8rem;
+     text-align: center;
+     font-weight: 100%;
+ }
 
-}
+ h3 {
+     margin-bottom: 0rem;
+ }
 
-header {
-    display: flex;
-    gap: 0.7rem;
-    align-items: center;
-}
+ label {
+     font-size: 1.1rem;
+ }
 
 
 
-.bi-journal-check {
-    font-size: 1.8rem;
-    text-align: center;
-    font-weight: 100%;
-}
+ .bi-trash3 {
+     font-size: 1.1rem;
+    color: var(--clr-dark);
+     transition: transform 0.3s ease-in-out;
+ }
 
-h3 {
-    margin-bottom: 0rem;
-}
+ .bi-trash3:hover {
+     cursor: pointer;
+     transform: scale(1.1);
+ }
 
-label {
+ .bi-square {
+     font-size: 1.1rem;
+     color:var(--clr-dark);
+ }
+
+ .bi-square:hover {
+     cursor: pointer;
+ }
+
+ .bi-check-square {
     font-size: 1.1rem;
+    color: var(--clr-dark);
+ }
+
+ .clear-btn {
+     display: block;
+ }
+
+
+ .edit-text {
+     color: rgb(180, 177, 175);
+ }
+
+ .hoverMode {
+     transition: all 0.3s ease-in-out;
+ }
+
+ .hoverMode:hover {
+     color: blueviolet;
+     /* cursor:cell; */
+     transform: scale(1.06);
+ }
+
+ .line-on-text {
+     text-decoration-line: line-through;
+ }
+
+ #myProgress {
+     width: 100%;
+     height: 15px;
+     border-radius: 20px;
+     color: var(--clr-pink);
+     border: 2px solid;
+     position: relative;
+     margin: 1 rem;
+ }
+
+ #myBar {
+     width: 0;
+     height: 12px;
+     border-radius: inherit;
+     background-color: var(--clr-pink);
+     background: currentColor;
+ }
+
+.btn-outline-secondary{
+border-color: var(--clr-dark);
 }
 
-
-
-.bi-x {
-    font-size: 1.3rem;
-    color: rgb(246, 66, 66);
-}
-
-.bi-check {
-    font-size: 1.3rem;
-    color: rgb(42, 205, 115);
+.btn-outline-secondary:hover{
+    background-color: var(--clr-dark);
 }
 
 .clear-btn {
-    display: block;
-
-}
-
-
-.edit-text {
-    color: rgb(180, 177, 175);
-}
-
-.hoverMode{
-    transition: color 0.3s ease-in-out;
-   
-}
- 
-
-.hoverMode:hover {
-    color:blueviolet;
-    cursor:cell;
-}
-
-.line-on-text {
-    text-decoration-line: line-through;
-}
-
-#myProgress {
-    width: 100%;
-    height: 15px;
-    border-radius: 20px;
-    color: var(--clr-dark);
-    border: 2px solid;
-    position: relative;
-    margin:1 rem;
-}
-
-#myBar {
-    width: 0;
-    height: 12px;
-    border-radius: inherit;
     background-color: var(--clr-dark);
-    background: currentColor;
 }
+ .clear-btn:hover{
+    background-color: #625a9d;
+ }
 
-.container {
-    width: 50%;
-}
+ .container {
+     width: 50%;
+ }
 
-.bar-container {
-    gap:0.5rem;
-    align-items: center;
-    justify-content: center;
-}
+ .bar-container {
+     gap: 0.5rem;
+     align-items: center;
+     justify-content: center;
+ }
 
-@media (max-width:768px) {
-    .container {
-        width: 100%;
-    }
-}
-
-
-
-
-
+ @media (max-width:768px) {
+     .container {
+         width: 100%;
+     }
+ }
